# spartan

./: .actrc  .gitignore  .yamllint  API_UPDATE.md  API_UPDATE_0.29.3.md  README.md  RELEASE.md  TESTING_WORKFLOWS.md  WINDOWS_INSTALL.md  WORKFLOW_TESTING_SUMMARY.md  check-release-status.sh  check-workflow.sh  cleanup-workflow-runs.sh  install-certificate.ps1  pubspec.yaml  release.sh  test-workflow.sh
.github/workflows/: build_linux.yml  build_macos.yml  build_windows.yml  release.yml  test-macos.yml  test-windows.yml
android/: gradle.properties
android/app/: build.gradle
ios/Runner/: Info.plist
ios/Runner.xcodeproj/: project.pbxproj
lib/: main.dart
lib/features/logger/: logger.dart
lib/features/router/: router.dart  routes.dart
lib/l10n/: app_ar.arb  app_bg.arb  app_de.arb  app_en.arb  app_es.arb  app_fr.arb  app_hi.arb  app_it.arb  app_ja.arb  app_ko.arb  app_ms.arb  app_nl.arb  app_pl.arb  app_pt.arb  app_ru.arb  app_tr.arb  app_uk.arb  app_zh.arb
lib/shared/providers/: progress_report_provider.dart
lib/shared/resources/: app_resources.dart
lib/shared/theme/: dark.dart  extensions.dart  tos.dart  (+2 more)
linux/: CMakeLists.txt  my_application.cc
macos/Runner.xcodeproj/: project.pbxproj
rust/: Cargo.toml
rust/src/api/: address_book.rs  api.rs  logger.rs  precomputed_tables.rs  progress_report.rs  seed_search_engine.rs  utils.rs  wallet.rs  xswd.rs
rust/src/api/models/: address_book_dtos.rs  network.rs  wallet_dtos.rs
test/: placeholder_test.dart
web/: index.html  manifest.json
windows/: CMakeLists.txt
windows/runner/: Runner.rc  main.cpp
(+136 files in other folders)
